[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/background/clean_title_screen.jpg" type="Texture" id=1]
[ext_resource path="res://src/themes/theme.tres" type="Theme" id=2]
[ext_resource path="res://src/ui/texture_button/change_scene_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/ui/texture_button/quit_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sprites/logo_2.png" type="Texture" id=6]
[ext_resource path="res://src/level/game/main_menu.gd" type="Script" id=7]
[ext_resource path="res://src/ui/volume.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/ui/fade.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("volume:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("options/title:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("options/menu/buttons:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("options:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:user_input_allowed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("volume:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.2, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "button_access"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("volume")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_theme"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("options/title:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.2, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="level_main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 7 )
user_input_allowed = true

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7

[node name="fade" parent="." instance=ExtResource( 9 )]

[node name="options" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="title" type="TextureRect" parent="options"]
margin_left = 1139.0
margin_top = 49.0
margin_right = 1726.0
margin_bottom = 358.0
texture = ExtResource( 6 )

[node name="menu" type="CenterContainer" parent="options"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -781.0
margin_top = 83.0
margin_right = -71.0
margin_bottom = 83.0

[node name="buttons" type="VBoxContainer" parent="options/menu"]
margin_left = 115.0
margin_top = 274.0
margin_right = 595.0
margin_bottom = 806.0
focus_neighbour_top = NodePath("change_scene_button")
focus_neighbour_right = NodePath("quit_button")
focus_neighbour_bottom = NodePath("quit_button")
custom_constants/separation = -64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="change_scene_button" parent="options/menu/buttons" instance=ExtResource( 3 )]
margin_right = 480.0
margin_bottom = 220.0
next_scene = "res://src/level/game/level_001.tscn"

[node name="change_scene_button2" parent="options/menu/buttons" instance=ExtResource( 3 )]
margin_top = 156.0
margin_right = 480.0
margin_bottom = 376.0
next_scene = "res://src/level/game/level_credits.tscn"

[node name="label" parent="options/menu/buttons/change_scene_button2" index="0"]
text = "Credits"

[node name="quit_button" parent="options/menu/buttons" instance=ExtResource( 5 )]
margin_top = 312.0
margin_bottom = 532.0

[node name="animation_player" type="AnimationPlayer" parent="options"]
root_node = NodePath("../..")
autoplay = "fade"
anims/RESET = SubResource( 3 )
anims/fade = SubResource( 4 )

[node name="volume" parent="." instance=ExtResource( 8 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 36.0
margin_top = -168.0
margin_right = 309.0
margin_bottom = -6.0
alignment = 1

[node name="volume_button" parent="volume" index="0"]
margin_top = 8.0
margin_bottom = 134.0

[node name="h_slider" parent="volume" index="1"]
margin_top = 138.0
margin_right = 273.0
margin_bottom = 154.0

[connection signal="fade_finished" from="fade" to="." method="_on_fade_fade_finished"]
[connection signal="next_scene" from="options/menu/buttons/change_scene_button" to="." method="_on_change_scene_button_next_scene"]
[connection signal="next_scene" from="options/menu/buttons/change_scene_button2" to="." method="_on_change_scene_button_next_scene"]
[connection signal="animation_finished" from="options/animation_player" to="." method="_on_animation_player_animation_finished"]

[editable path="options/menu/buttons/change_scene_button2"]
[editable path="volume"]
